# design-patterns-rust

./: .gitignore  README.MD
10_testing/: 1_unit_tests.rs  2_test_result_and_option_types.rs  3_test_panics.rs
11_smart_pointers_and_memory_management/: 10_rc_refcell_T.rs  12_graph_with_shared_nodes.rs  1_using_box_T.rs  2_recursion_with_box.rs  4_atomic_reference_count.rs  5_ref_cell.rs  6_arc_T_and_mutex_T.rs  7_rwlock.rs  8_smart_pointers_and_methos_call.rs  methods_for_struct_own_smart_pointer.rs  reference_count.rs  smart_pointer_and_ownership_transfer.rs
12_managing_system_resources/: 1_read_entire_file_into_a_string.rs  404.html  7_sending_data_and_receiving_responses.rs  8_handling_result_from_network_operations.rs  a_sample.txt  about.html  appending_to_existing_files.rs  efficient_memory_usage_io.rs  example_1_more_robust_http_server.rs  example_2_cli_for_file_operations.rs  index.html  manipulating_file_dirs.rs  processing_large_files_in_chunks.rs  reading_file_line_by_line.rs  reading_requests_and_sending_responses.rs  writing_string_or_bytes_to_file.rs
13_concurrency_and_parallelism/: 10_synchronize_threads_with_channels.rs  13_good_bad_practices_using_lock.rs  1_basic_thread_creation.rs  2_moving_data_into_threads_with_move_closure.rs  3_handling_thread_panics_gracefully.rs  4_atomic_rc_sharing_ownership_atomically_across_threads.rs  5_arc_mutex_t_shared_mutable_state.rs  6_rwlock_t.rs  7_creating_a_channel.rs  8_sending_data_with_sender_t.rs  (+1 more)
16_dockerization/todo/wasm_client/: Cargo.toml
16_dockerization/todo/wasm_client/www/: index.html
(+75 files in other folders)
