[package]
name = "wasm_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"] # specifies output as a dynamic libray for Wasm

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.65"
web-sys = { version = "0.3.92", features = ["console"] }
